--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,8 @@ marketing:
     site_type: Organization
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo research group theme powered by Wowchemy website builder.'
-    twitter: 'GetResearchDev'
+    description: 'Welcome to the Official Site of Huaping Wang Research Team'
+    twitter: ''
   analytics:
     google_analytics: ''
     baidu_tongji: ''
@@ -45,7 +45,7 @@ header:
 
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: 'Welcome to the Official Site of Huaping Wang Research Team'
     license:
       enable: true
       allow_derivatives: false
