--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,7 +13,7 @@ main:
   - name: Team
     url: people
     weight: 30
-  - name: Platforms
+  - name: Research & Platforms
     url: event
     weight: 40
   - name: Publications
