--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,18 +10,15 @@ main:
   - name: News
     url: post
     weight: 20
-  - name: Research
-    url: research
-    weight: 30
   - name: Team
     url: people
-    weight: 40
-  - name: Platforms
+    weight: 30
+  - name: Research & Platforms
     url: event
-    weight: 50
+    weight: 40
   - name: Publications
     url: publication
-    weight: 60
+    weight: 50
   - name: Contact
     url: contact
-    weight: 70
+    weight: 60
