--- a/.github/workflows/build-hugo.yml
+++ b/.github/workflows/build-hugo.yml
@@ -1,4 +1,4 @@
-name: Build Hugo Site (Minimal)
+name: Build and Deploy Hugo Blox Site
 
 on:
   push:
@@ -6,8 +6,13 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     env:
@@ -19,10 +24,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Prepare workspace cache directories
+      - name: Prepare Hugo cache in /tmp
         run: |
+          echo "Cleaning /tmp/hugo_cache_runner..."
+          sudo rm -rf /tmp/hugo_cache_runner
+          sudo mkdir -p /tmp/hugo_cache_runner
+          sudo chown -R $(whoami):$(whoami) /tmp/hugo_cache_runner
+          echo "Workspace cache dirs..."
           mkdir -p "${HUGO_CACHE_DIR}" "${GOMODCACHE}"
-          sudo chown -R "$(whoami):$(whoami)" "${HUGO_CACHE_DIR}" "${GOMODCACHE}"
+          sudo chown -R $(whoami):$(whoami) "${HUGO_CACHE_DIR}" "${GOMODCACHE}"
+          ls -ld /tmp/hugo_cache_runner "${HUGO_CACHE_DIR}" "${GOMODCACHE}"
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
