--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,15 +2,17 @@ name: Deploy website to GitHub Pages
 
 env:
   WC_HUGO_VERSION: '0.135.0'
+  # 强制 Hugo Blox 使用工作区缓存，避免 /tmp 权限问题
+  HUGO_CACHE_DIR: ${{ github.workspace }}/.hugo_cache
+  HUGO_BLOX_CACHE_DIR: ${{ github.workspace }}/.hugo_blox_cache
+  GOPATH: ${{ github.workspace }}/.gopath
+  GOMODCACHE: ${{ github.workspace }}/.gopath/pkg/mod
 
 on:
-  # Trigger the workflow every time you push to the `main` branch
   push:
     branches: ["main"]
-  # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
-# Provide permission to clone the repo and deploy it to GitHub Pages
 permissions:
   contents: read
   pages: write
@@ -21,7 +23,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build website
   build:
     if: github.repository_owner != 'HugoBlox'
     runs-on: ubuntu-latest
@@ -29,34 +30,44 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          # Fetch history for Hugo's .GitInfo and .Lastmod
           fetch-depth: 0
+
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: ${{ env.WC_HUGO_VERSION }}
           extended: true
-      - uses: actions/cache@v4
-        with:
-          path: /tmp/hugo_cache_runner/
-          key: ${{ runner.os }}-hugomod-${{ hashFiles('**/go.mod') }}
-          restore-keys: |
-            ${{ runner.os }}-hugomod-
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v5
+
+      - name: Prepare workspace cache directories
+        run: |
+          mkdir -p "${HUGO_CACHE_DIR}" "${HUGO_BLOX_CACHE_DIR}" "${GOMODCACHE}"
+          sudo chown -R $(whoami):$(whoami) "${HUGO_CACHE_DIR}" "${HUGO_BLOX_CACHE_DIR}" "${GOMODCACHE}"
+          echo "Cache directories ready:"
+          ls -ld "${HUGO_CACHE_DIR}" "${HUGO_BLOX_CACHE_DIR}" "${GOMODCACHE}"
+
+      - name: Hugo modules: clean & get
+        run: |
+          hugo mod clean || true
+          hugo mod get
+          hugo mod tidy
+
       - name: Build with Hugo
         env:
           HUGO_ENVIRONMENT: production
         run: |
-          echo "Hugo Cache Dir: $(hugo config | grep cachedir)"
           hugo --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
+          echo "Build finished. public/ contents:"
+          ls -la ./public || true
+
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
 
-  # Deploy website to GitHub Pages hosting
   deploy:
     if: github.repository_owner != 'HugoBlox'
     environment:
