--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,11 +2,13 @@ name: Deploy website to GitHub Pages
 
 env:
   WC_HUGO_VERSION: '0.135.0'
-  # 将 Hugo/Blox 缓存放在工作区，避免 /tmp 权限问题
+  # Hugo/Blox 缓存放在工作区，避免 /tmp 权限问题
   HUGO_CACHE_DIR: ${{ github.workspace }}/.hugo_cache
   HUGO_BLOX_CACHE_DIR: ${{ github.workspace }}/.hugo_blox_cache
   GOPATH: ${{ github.workspace }}/.gopath
   GOMODCACHE: ${{ github.workspace }}/.gopath/pkg/mod
+  # 允许 Go module 缓存目录可写，解决 Hugo Blox 写 hugo_stats.json 权限问题
+  GOFLAGS: -modcacherw
 
 on:
   push:
@@ -38,7 +40,7 @@ jobs:
           hugo-version: ${{ env.WC_HUGO_VERSION }}
           extended: true
 
-      # 修改 cache 路径到工作区，避免 /tmp 权限问题
+      # 使用工作区缓存，避免 /tmp 权限问题
       - uses: actions/cache@v4
         with:
           path: ${{ github.workspace }}/.hugo_cache
