--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,15 +2,15 @@ name: Deploy website to GitHub Pages
 
 env:
   WC_HUGO_VERSION: '0.135.0'
+  # 强制 Hugo 使用工作目录下的缓存，而不是 /tmp
+  HUGO_CACHE_DIR: ${{ github.workspace }}/.hugo_cache
+  GOMODCACHE: ${{ github.workspace }}/.gopath/pkg/mod
 
 on:
-  # Trigger the workflow every time you push to the `main` branch
   push:
     branches: ["main"]
-  # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
-# Provide permission to clone the repo and deploy it to GitHub Pages
 permissions:
   contents: read
   pages: write
@@ -21,7 +21,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Build website
   build:
     if: github.repository_owner != 'HugoBlox'
     runs-on: ubuntu-latest
@@ -29,34 +28,49 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          # Fetch history for Hugo's .GitInfo and .Lastmod
           fetch-depth: 0
+
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: ${{ env.WC_HUGO_VERSION }}
           extended: true
+
+      - name: Prepare cache directories
+        run: |
+          mkdir -p "${HUGO_CACHE_DIR}" "${GOMODCACHE}"
+          echo "Cache directories ready"
+          ls -ld "${HUGO_CACHE_DIR}" "${GOMODCACHE}"
+
       - uses: actions/cache@v4
         with:
-          path: /tmp/hugo_cache_runner/
+          path: |
+            .hugo_cache
+            .gopath/pkg/mod
           key: ${{ runner.os }}-hugomod-${{ hashFiles('**/go.mod') }}
           restore-keys: |
             ${{ runner.os }}-hugomod-
+
+      - name: Hugo modules tidy
+        run: |
+          hugo mod tidy
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+
       - name: Build with Hugo
         env:
           HUGO_ENVIRONMENT: production
         run: |
-          echo "Hugo Cache Dir: $(hugo config | grep cachedir)"
+          echo "Using Hugo cache: $HUGO_CACHE_DIR"
           hugo --minify --baseURL "${{ steps.pages.outputs.base_url }}/"
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
 
-  # Deploy website to GitHub Pages hosting
   deploy:
     if: github.repository_owner != 'HugoBlox'
     environment:
